[gd_scene load_steps=67 format=3 uid="uid://c56ua5ogcw3kg"]

[ext_resource type="Shader" uid="uid://c1hof2u0lir8f" path="res://Menu_/Menu.gdshader" id="1_n4eug"]
[ext_resource type="Script" uid="uid://dd8nju07qjh0t" path="res://Menu_/button.gd" id="1_uubjt"]
[ext_resource type="Script" uid="uid://0h8be0ie4jo3" path="res://Menu_/Bot√£o_Sair.gd" id="2_5yleq"]
[ext_resource type="Texture2D" uid="uid://bh1t4lkphb8x0" path="res://images/0a5ea1cf-3f9d-4926-b554-117c5e4d3e67.png" id="2_dlksc"]
[ext_resource type="Script" uid="uid://vgy68vou08kv" path="res://Menu_/yes.gd" id="3_cx167"]
[ext_resource type="Shader" uid="uid://b60r2amiolhbm" path="res://Menu_/Pass.gdshader" id="3_v0s1l"]
[ext_resource type="Script" uid="uid://jsu1iyv2s18w" path="res://Menu_/no.gd" id="3_ylpcl"]
[ext_resource type="Theme" uid="uid://qqfm4lhin4fd" path="res://Menu_/new_theme.tres" id="4_1igrg"]
[ext_resource type="Script" uid="uid://jwy1c1hbm5ms" path="res://Menu_/texture_rect_Animation.gd" id="4_rwbgt"]
[ext_resource type="Texture2D" uid="uid://bfjlkiancxl32" path="res://Menu_/Logo_Verdadeira.png" id="4_veu3q"]
[ext_resource type="Script" uid="uid://c0k7w84bgnr32" path="res://Menu_/panel_2.gd" id="6_xucoo"]
[ext_resource type="FontFile" uid="uid://ch116tksyjec6" path="res://Menu_/pixel.ttf" id="7_rb3nl"]
[ext_resource type="AudioStream" uid="uid://cpii7bj6p82hj" path="res://Sound/ui_click.wav" id="8_hcwhg"]
[ext_resource type="AudioStream" uid="uid://bigqyyi5t2lmh" path="res://Sound/ui_return.wav" id="9_5p1lm"]
[ext_resource type="Script" uid="uid://c4qn5ppye0b2l" path="res://Menu_/button_3.gd" id="10_ags3h"]
[ext_resource type="Texture2D" uid="uid://bkq6c7mqg0vtl" path="res://images/Fundo_Painel.png" id="11_7pg7o"]
[ext_resource type="Texture2D" uid="uid://demvgf12i117p" path="res://images/sprite_retorno_1/Press_Retorna.png" id="14_jjijr"]
[ext_resource type="Texture2D" uid="uid://1xf02k2p6mrd" path="res://images/sprite_retorno_1/Retorno.png" id="15_5o4rr"]
[ext_resource type="Script" uid="uid://daxce2ndikr7" path="res://Menu_/Exit_Button.gd" id="16_5o4rr"]
[ext_resource type="Texture2D" uid="uid://dyyg8jxx8asua" path="res://images/Setas_Anim/Setas_Teclado.png" id="18_658fm"]
[ext_resource type="Texture2D" uid="uid://cishi46oj80ba" path="res://images/Setas_Anim/Setas_Teclado-1.png" id="19_8xofk"]
[ext_resource type="Texture2D" uid="uid://cmeaxj0fqfkh8" path="res://images/Setas_Anim/Setas_Teclado-2.png" id="20_ibmel"]
[ext_resource type="Texture2D" uid="uid://dmi11joqoiayg" path="res://images/Setas_Anim/Setas_Teclado-3.png" id="21_ji4p5"]
[ext_resource type="Texture2D" uid="uid://b2vnfcadieyls" path="res://images/Setas_Anim/Setas_Teclado-4.png" id="22_e6isx"]
[ext_resource type="Texture2D" uid="uid://bcnik1dxmg15h" path="res://images/Mouse_Click/mouse_click-0.png" id="23_0tiyo"]
[ext_resource type="Script" uid="uid://c0wallle8dn3k" path="res://Menu_/keys.gd" id="23_8xofk"]
[ext_resource type="Texture2D" uid="uid://bck6i82aepauf" path="res://images/Mouse_Click/mouse_click-1.png" id="24_6rldo"]
[ext_resource type="FontFile" uid="uid://bg7m55wv7nf87" path="res://Menu_/Silkscreen-Regular.ttf" id="24_8iivf"]
[ext_resource type="Texture2D" uid="uid://nnn6mqyrx07y" path="res://images/Mouse_Click/mouse_click-2.png" id="26_0tiyo"]
[ext_resource type="Script" uid="uid://c88hnknhvv4yc" path="res://Menu_/mouse_key.gd" id="26_ibmel"]
[ext_resource type="Texture2D" uid="uid://byufaeo2wweg8" path="res://images/Mouse_Click/mouse_click-3.png" id="27_6rldo"]
[ext_resource type="Texture2D" uid="uid://i63schl7mf5y" path="res://images/Setas_Anim/Tecla_F1.png" id="29_8iivf"]
[ext_resource type="Texture2D" uid="uid://cfgen278ixm7y" path="res://images/Setas_Anim/Tecla_F2.png" id="30_sqyja"]
[ext_resource type="Script" uid="uid://nkypjv4jl321" path="res://Menu_/keys_f.gd" id="31_ruq72"]
[ext_resource type="Texture2D" uid="uid://dj085cqa5xbfj" path="res://Menu_/Button_Mark2.png" id="33_4plug"]
[ext_resource type="Script" uid="uid://b70iywjwy23ca" path="res://Menu_/audio_button.gd" id="33_sqyja"]
[ext_resource type="Texture2D" uid="uid://bfdejgs5q2dst" path="res://Menu_/Button_Mark3.png" id="35_gsxx4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hcwhg"]
shader = ExtResource("1_n4eug")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ktlje"]
shader = ExtResource("3_v0s1l")
shader_parameter/size = 25.0
shader_parameter/color1 = Color(0.25098, 0, 0.0196078, 1)
shader_parameter/color2 = Color(0.4, 0.0156863, 0.0431373, 1)
shader_parameter/speed = 1.0
shader_parameter/direction_x = 1.0
shader_parameter/direction_y = 1.0

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_rb3nl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rwbgt"]
texture = ExtResource("11_7pg7o")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
region_rect = Rect2(-1, -1, 641, 327)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i5y2r"]
texture = ExtResource("11_7pg7o")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5o4rr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7pg7o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8halt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5o4rr"]
texture = ExtResource("15_5o4rr")
region_rect = Rect2(140, 130, 60, 55)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7pg7o"]
texture = ExtResource("14_jjijr")
region_rect = Rect2(140, 130, 60, 55)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8halt"]
texture = ExtResource("15_5o4rr")
region_rect = Rect2(140, 130, 60, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_1v1ua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_658fm")
}, {
"duration": 1.0,
"texture": ExtResource("19_8xofk")
}, {
"duration": 1.0,
"texture": ExtResource("20_ibmel")
}, {
"duration": 1.0,
"texture": ExtResource("21_ji4p5")
}, {
"duration": 1.0,
"texture": ExtResource("22_e6isx")
}],
"loop": true,
"name": &"Keys_A",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8iivf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_0tiyo")
}, {
"duration": 1.0,
"texture": ExtResource("24_6rldo")
}, {
"duration": 1.0,
"texture": ExtResource("26_0tiyo")
}, {
"duration": 1.0,
"texture": ExtResource("27_6rldo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_4plug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_8iivf")
}, {
"duration": 1.0,
"texture": ExtResource("30_sqyja")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4plug"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gsxx4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ql8eh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1pqlq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nj1i6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tpwp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ivctv"]
texture = ExtResource("33_4plug")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t46gr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4plug"]
texture = ExtResource("33_4plug")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qrd4c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ql8eh"]
texture = ExtResource("33_4plug")

[sub_resource type="Animation" id="Animation_0edib"]
resource_name = "Fade_To_Black"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_n6j18"]
resource_name = "Fade_to_Normal"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.58, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_n2sm7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jd3j0"]
_data = {
&"Fade_To_Black": SubResource("Animation_0edib"),
&"Fade_to_Normal": SubResource("Animation_n6j18"),
&"RESET": SubResource("Animation_n2sm7")
}

[node name="Node2D" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_hcwhg")
offset_right = 1368.0
offset_bottom = 768.0
texture = ExtResource("2_dlksc")

[node name="Background_Menu" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 3
material = SubResource("ShaderMaterial_ktlje")
offset_left = 32.0
offset_top = -136.0
offset_right = 73.0
offset_bottom = -96.0
rotation = 0.261799
scale = Vector2(11.666, 22.2905)
texture = SubResource("CurveXYZTexture_rb3nl")
expand_mode = 1
script = ExtResource("4_rwbgt")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(206.968, 197.349)
scale = Vector2(0.427436, 0.398322)
skew = 0.129154
texture = ExtResource("4_veu3q")

[node name="Painel_Principal" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
pivot_offset = Vector2(0, 480)
script = ExtResource("6_xucoo")

[node name="Button" type="Button" parent="Painel_Principal"]
layout_mode = 0
offset_top = 384.0
offset_right = 320.0
offset_bottom = 448.0
theme = ExtResource("4_1igrg")
action_mode = 0
text = "        Jogar"
alignment = 0
script = ExtResource("1_uubjt")
Can_Press = true

[node name="Button2" type="Button" parent="Painel_Principal"]
layout_mode = 0
offset_top = 640.0
offset_right = 320.0
offset_bottom = 704.0
theme = ExtResource("4_1igrg")
action_mode = 0
text = "         Sair"
alignment = 0
script = ExtResource("2_5yleq")
Can_Press = true

[node name="Button3" type="Button" parent="Painel_Principal"]
layout_mode = 0
offset_top = 512.0
offset_right = 320.0
offset_bottom = 576.0
theme = ExtResource("4_1igrg")
action_mode = 0
text = "  Configura√ßoes"
alignment = 0
script = ExtResource("10_ags3h")
Can_Press = true

[node name="Menu_Saida" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 600.0
offset_top = 344.0
offset_right = 856.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 44)
theme_override_styles/panel = SubResource("StyleBoxTexture_rwbgt")

[node name="Yes" type="Button" parent="Menu_Saida"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.364
anchor_right = 0.437
anchor_bottom = 0.909
offset_top = -0.0320015
offset_right = 0.127998
offset_bottom = 0.00799561
theme = ExtResource("4_1igrg")
theme_override_fonts/font = ExtResource("7_rb3nl")
theme_override_font_sizes/font_size = 12
text = "     Sim"
alignment = 0
script = ExtResource("3_cx167")

[node name="No" type="Button" parent="Menu_Saida"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.364
anchor_right = 0.906
anchor_bottom = 0.818
offset_left = -0.0640106
offset_top = -0.0320015
offset_right = 0.0639954
offset_bottom = 8.016
theme = ExtResource("4_1igrg")
theme_override_font_sizes/font_size = 16
text = "  N√£o"
alignment = 0
script = ExtResource("3_ylpcl")

[node name="Label" type="Label" parent="Menu_Saida"]
modulate = Color(0.874737, 0.874737, 0.874737, 1)
layout_mode = 0
offset_left = 80.0
offset_right = 182.0
offset_bottom = 23.0
text = "Tem certeza?"
horizontal_alignment = 1

[node name="Config_Painel" type="Panel" parent="."]
offset_left = 288.0
offset_top = 128.0
offset_right = 1120.0
offset_bottom = 640.0
pivot_offset = Vector2(416, 248)
theme_override_styles/panel = SubResource("StyleBoxTexture_i5y2r")

[node name="Button" type="Button" parent="Config_Painel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.962
anchor_right = 1.0
anchor_bottom = 0.062
offset_left = -0.384033
offset_bottom = 0.255999
theme_override_styles/focus = SubResource("StyleBoxEmpty_5o4rr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_7pg7o")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8halt")
theme_override_styles/hover = SubResource("StyleBoxTexture_5o4rr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7pg7o")
theme_override_styles/normal = SubResource("StyleBoxTexture_8halt")
script = ExtResource("16_5o4rr")

[node name="Label" type="Label" parent="Config_Painel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.016
anchor_right = 0.154
anchor_bottom = 0.078
offset_left = 0.191999
offset_top = -0.192
offset_right = 39.872
offset_bottom = 8.064
theme_override_fonts/font = ExtResource("7_rb3nl")
theme_override_font_sizes/font_size = 19
text = "Controles"
horizontal_alignment = 1

[node name="Keys_WSAD" type="AnimatedSprite2D" parent="Config_Painel"]
position = Vector2(192, 133)
scale = Vector2(0.314901, 0.313546)
sprite_frames = SubResource("SpriteFrames_1v1ua")
animation = &"Keys_A"
script = ExtResource("23_8xofk")

[node name="Movimenta√ß√£o_Label" type="Label" parent="Config_Painel/Keys_WSAD"]
anchors_preset = -1
anchor_left = 0.117
anchor_top = 1.054
anchor_right = 0.918
anchor_bottom = 1.227
offset_left = -364.746
offset_top = -239.098
offset_right = -355.675
offset_bottom = -238.792
theme_override_fonts/font = ExtResource("24_8iivf")
theme_override_font_sizes/font_size = 60
text = "(Movimenta√ß√£o)"
horizontal_alignment = 1

[node name="Mouse" type="AnimatedSprite2D" parent="Config_Painel"]
position = Vector2(630, 120)
scale = Vector2(1.0875, 1.1875)
sprite_frames = SubResource("SpriteFrames_8iivf")
script = ExtResource("26_ibmel")

[node name="Keys_F" type="AnimatedSprite2D" parent="Config_Painel"]
position = Vector2(355, 172.75)
scale = Vector2(2.25195, 2.20312)
sprite_frames = SubResource("SpriteFrames_4plug")
script = ExtResource("31_ruq72")

[node name="Audio_Button" type="Button" parent="Config_Painel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.093
anchor_top = 0.641
anchor_right = 0.212
anchor_bottom = 0.828
offset_left = -0.375999
offset_top = -0.191986
offset_right = -0.384003
offset_bottom = 0.0639954
theme_override_styles/focus = SubResource("StyleBoxEmpty_4plug")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_gsxx4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ql8eh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1pqlq")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nj1i6")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0tpwp")
theme_override_styles/hover = SubResource("StyleBoxTexture_ivctv")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_t46gr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4plug")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_qrd4c")
theme_override_styles/normal = SubResource("StyleBoxTexture_ql8eh")
script = ExtResource("33_sqyja")

[node name="Sprite2D" type="Sprite2D" parent="Config_Painel/Audio_Button"]
visible = false
position = Vector2(49.5, 48)
scale = Vector2(5.4375, 5.25)
texture = ExtResource("35_gsxx4")

[node name="Label" type="Label" parent="Config_Painel/Audio_Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.182
anchor_top = 1.063
anchor_right = 1.212
anchor_bottom = 1.333
offset_left = 0.0180016
offset_top = 1.95203
offset_right = 0.012001
offset_bottom = 0.0320282
theme_override_fonts/font = ExtResource("24_8iivf")
text = "(Mutar Audio)"

[node name="UiClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hcwhg")

[node name="UiReturn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5p1lm")

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jd3j0")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
offset_right = 1366.0
offset_bottom = 768.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Painel_Principal/Button" to="Painel_Principal/Button" method="_on_pressed"]
[connection signal="mouse_entered" from="Painel_Principal/Button2" to="Painel_Principal" method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Painel_Principal/Button2" to="Painel_Principal" method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="Painel_Principal/Button2" to="Painel_Principal/Button2" method="_on_pressed"]
[connection signal="mouse_entered" from="Painel_Principal/Button3" to="Painel_Principal" method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Painel_Principal/Button3" to="Painel_Principal" method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="Painel_Principal/Button3" to="Painel_Principal/Button3" method="_on_pressed"]
[connection signal="pressed" from="Menu_Saida/Yes" to="Menu_Saida/Yes" method="_on_pressed"]
[connection signal="pressed" from="Menu_Saida/No" to="Menu_Saida/No" method="_on_pressed"]
[connection signal="pressed" from="Config_Painel/Button" to="Config_Painel/Button" method="_on_pressed"]
[connection signal="pressed" from="Config_Painel/Audio_Button" to="Config_Painel/Audio_Button" method="_on_pressed"]
[connection signal="animation_finished" from="Transition" to="Painel_Principal/Button" method="_on_transition_animation_finished"]
